--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@shopify/shopify-app-session-storage-mongodb": "^1.0.5",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "cryptr": "^6.2.0",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
